--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
-    "react": "^19.1.0",
+    "mdb-react-ui-kit": "^9.0.0",
+    "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.60.0",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.7.0",
